src/style/main.scss
@import './_variables';
@import '~bulma/bulma';
@import './monaco-editor-hover-content.sass';
@import '../../node_modules/bulma-pageloader/dist/css/bulma-pageloader.sass';
@import '../../node_modules/bulma-switch/dist/css/bulma-switch.sass';
@import './menu-group';
@import './toast.scss';
@import './problems.scss';

$fa-font-path: "~font-awesome/fonts/";
@import '~font-awesome/scss/font-awesome';
@import './fira_code.scss';

$tabs-header-height: 42px;

html {
    overflow-y: hidden;

    &.has-navbar-fixed-top {
        padding-top: 0;

        body {
            padding-top: 0;
            margin-top: 3.25rem;
        }
    }
}

.page-content {
    height: calc(100vh - #{$navbar-height});
    width: 100%;
    display: flex;

    .sidebar {
        display: flex;
        flex-direction: column;
        flex: none;
        background-color: $card-header-background-color;

        &.is-expanded {
            width: 250px;
        }

        .widgets-list {
            overflow-y: auto;
            flex: 1 1 0%;
            max-height: calc(100vh - #{$navbar-height} - 42px);
        }

        .item {
            &:hover {
                background-color: $info;
                color: $white;

                .item-content {
                    display: block;
                    transform: translate3d(42px, -42px, 0);
                    position: fixed;
                    z-index: 2;
                }
            }

            .item-content {
                display: none;
                width: 250px;
                border: 1px solid rgba(0, 0, 0, 0.1);
            }
        }

        .card-header {
            cursor: pointer;
        }
    }

    .main-content {
        display: flex;
        width: 100%;

        .tabs {
            margin-bottom: 0;
            height: $tabs-header-height;
        }

        .horizontal-resize {
            width: 4px;
            margin-left: -2px;
            background-color: $resize-background;
            cursor: ew-resize;
            z-index: 1000;
        }

        .vertical-resize {
            height: 6px;
            margin-top: -3px;
            background-color: $resize-background;
            cursor: ns-resize;
            z-index: 1000;
        }

        .editor-container {
            height: 100%;

            .card {

                .card-header {
                    cursor: pointer;
                }

                .card-content {
                    padding: 0;
                    height: calc(100% - 3em); // Compensate the line-height: 1.5; of the header

                    .editor-fsharp,
                    .editor-html {
                        height: 100%;
                    }

                }
            }

        }

        .collapse-control {
            position: absolute;
            z-index: 1000;
        }

        .output-container {
            height: 100%;

            .editor-output {
                height: calc(100% - #{$tabs-header-height});
            }

            iframe {
                width: 100%;
                height: calc(100% - #{$tabs-header-height});
                background-color: white;
            }
        }
    }
}

